# hs-blake3

./: .gitignore  README.md  cabal.project  default.nix  flake.nix  shell.nix
blake3/: CHANGELOG.md  LICENSE  README.md  blake3.cabal  cabal.nix  default.nix  pkg.nix
blake3/cbits/: Makefile  README.md  blake3_avx2.c  blake3_avx512.c  blake3_impl.h  blake3_sse2.c  blake3_sse41.c
blake3/lib/: BLAKE3.hs
blake3/lib/BLAKE3/: IO.hs  Raw.hs
blake3/test/: Main.hs
nix/: default.nix  sources.json
