cabal-version: 2.2
name: blake3
version: 0.1
license: Apache-2.0
license-file: LICENSE
extra-source-files: README.md CHANGELOG.md
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Copyright (c) Renzo Carbonara 2020
category: Cryptography
build-type: Simple
synopsis: BLAKE3 hashing algorithm
description: Bindings to the official BLAKE3 implementation in C
homepage: https://github.com/k0001/hs-blake3
bug-reports: https://github.com/k0001/hs-blake3/issues
tested-with: GHC == 8.6.5, GHC == 8.8.3
extra-source-files:
  cbits/*.h
  cbits/README.md
  cbits/LICENSE

common basic
  default-language: Haskell2010
  ghc-options: -Wall -Werror=incomplete-patterns
  build-depends:
    base == 4.*,
    memory

library
  import: basic
  hs-source-dirs: lib
  exposed-modules:
    BLAKE3
    BLAKE3.IO
    BLAKE3.Raw
  cc-options: -O3
  include-dirs: cbits/
  c-sources:
    cbits/blake3.c
    cbits/blake3_dispatch.c
    cbits/blake3_portable.c
  if arch(x86_64) && (os(linux) || os(darwin)) {
    c-sources:
      cbits/blake3_avx2_x86-64_unix.S
      cbits/blake3_avx512_x86-64_unix.S
      cbits/blake3_sse41_x86-64_unix.S
  } elif arch(x86_64) && os(windows) {
    c-sources:
      cbits/blake3_avx2_x86-64_windows_gnu.S
      cbits/blake3_avx512_x86-64_windows_gnu.S
      cbits/blake3_sse41_x86-64_windows_gnu.S
      -- cbits/blake3_avx512_x86-64_windows_msvc.asm
      -- cbits/blake3_avx2_x86-64_windows_msvc.asm
      -- cbits/blake3_sse41_x86-64_windows_msvc.asm
  } else {
    cc-options: -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512
    -- TODO USE THESE
    --   cbits/blake3_avx2.c
    --   cbits/blake3_avx512.c
    --   cbits/blake3_neon.c
    --   cbits/blake3_sse41.c
  }

test-suite test
  import: basic
  ghc-options: -Wall -Werror=incomplete-patterns -O2
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    blake3,
    memory,
    tasty,
    tasty-hunit,
